完成familiar_fox，ocelot_3形态的描述，可以打包了

--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -101,7 +101,7 @@
   "item.shape-shifter-curse.moondust_matrix.tooltip": ["悬浮在蜂蜜中的月尘"],
   "item.shape-shifter-curse.catalyst": ["催化剂"],
   "item.shape-shifter-curse.catalyst.tooltip": ["当你接触它时，你体内的魔法似乎有所反应"],
-  "item.shape-shifter-curse.powerful_catalyst": ["强效催化剂"],
+  "item.shape-shifter-curse.powerful_catalyst": ["共鸣催化剂"],
   "item.shape-shifter-curse.powerful_catalyst.tooltip": ["它也许可以让你的变化更进一步..永久性的。你真的要这么做么？"],
   "item.shape-shifter-curse.inhibitor": ["抑制剂"],
   "item.shape-shifter-curse.inhibitor.tooltip": ["当你接触它时，你体内的魔法似乎平静了一些"],
@@ -322,7 +322,12 @@
   "codex.form.ocelot2.appearance": ["你头顶的耳朵变得更大也更加灵活，你注意到它们会自动转向声音来源的方位\n你的全身现在都被带有黑色斑点的毛皮所覆盖。它们很保暖，你绝对不希望它们被打湿\n你的后足完全变成了趾行的结构，但是你依然可以勉强维持直立\n借助有力的四爪与几乎与躯干等长的尾部，你可以压低重心在原野上与森林中以极快的速度四足奔行与飞扑。你有信心没有任何猎物能从你的利爪下逃脱"],
   "codex.form.ocelot2.pros": ["得益于身体结构的改变，在潜行时，你会进入四足移动的狩猎姿态\n处于狩猎姿态时，你能够极为快速的奔跑，并且可以进入一格高的狭小区域\n处于狩猎姿态时，你的跳跃会变为前扑，让你能够跨越相当远的距离\n\n你的猫科动物眼睛让你即使在黑夜也能够清晰视物\n你能够在空手时使用前爪造成大量伤害\n借助你的爪子，你可以在树干与树叶上攀爬\n你不会发出脚步声，也不会受到摔落伤害\n新鲜的生肉给与你更高的饱食度\n你的身体给了你强大的免疫力，让你不会受到饥饿与中毒的异常状态\n苦力怕会对你敬而远之"],
   "codex.form.ocelot2.cons": ["处于狩猎姿态时，大幅度增强的身体机能会让你的饱食度快速被消耗。当饱食度少于阈值时，你也不再能够维持狩猎姿态\n\n对于你现在趾行的后足而言，用双足疾跑变得不再可能\n作为变得更小，更轻巧的代价，你的最大生命值更大幅度地减少了\n作为疾速而致命的猎手，除了头盔以外，你只能装备不影响行动的皮甲或链甲。同时，你也不再能有效使用盾牌阻挡伤害\n由于提升的新陈代谢，你的自然饱食度消耗速度更快\n你的消化系统进一步改变，生肉是你现在食谱中唯一的食物"],
-  "codex.form.ocelot2.instincts": ["在你的内心深处传来了某种微弱的悸动：你身上的变化还没有到达终点\n一剂强力催化剂可以让你的变化抵达下一个阶段…但这一过程很可能是永久性的\n你不会真的在考虑这件事情吧？"],
+  "codex.form.ocelot2.instincts": ["在你的内心深处传来了某种微弱的悸动：你身上的变化还没有到达终点\n一剂共鸣催化剂可以让你的变化抵达下一个阶段…但这一过程很可能是永久性的\n你不会真的在考虑这件事情吧？"],
+  "codex.form.ocelot3.title": ["\n'有人报告说在附近看到了一只大的出奇的白色豹猫。靠近森林时最好小心一些'"],
+  "codex.form.ocelot3.appearance": ["除了皮毛的颜色与身体的尺寸以外，你整体看上去与一只野生豹猫几乎没有差别\n你是密林中的王者。在你敏锐的双眼与尖利的四爪下，任何生物都是你的狩猎目标"],
+  "codex.form.ocelot3.pros": ["你的身体完全变为了四足结构，让你无论在任何状态跳跃时都可以向前方猛扑，从而跨越非常远的距离\n更加强力的四爪让你可以在几乎任何表面上攀爬\n你的疾跑能力被潜行所替代。在潜行时，你能够以极快的速度向前飞驰\n你在黑夜也能够清晰视物\n你能够在空手时使用前爪造成大量伤害\n你不会发出脚步声，也不会受到摔落伤害\n新鲜的生肉给与你更高的饱食度\n你的身体给了你强大的免疫力，让你不会受到饥饿与中毒的异常状态\n苦力怕会对你敬而远之"],
+  "codex.form.ocelot3.cons": ["完全改变的身体让你只能以生肉为食。即使在静止不动时，你高速运转的代谢系统也会以一定速度消耗饱食度——持续不断的狩猎是你唯一的选择\n\n任何护甲对你运动的阻碍都让你难以忍受。现在你只能穿戴头盔，也无法正常使用盾牌"],
+  "codex.form.ocelot3.instincts": [""],
 
   "codex.form.bat0.title": ["\n诅咒对你的身体产生了一些影响，让你看起来像某些翼手目的生物。你感到黑暗的环境在吸引着你。"],
   "codex.form.bat0.appearance": ["你的手臂外侧延伸出了附有皮膜的附肢\n你的尾骨也向外突出形成一条小小的尾部\n不过除此以外，它们似乎没有太多实际功能"],
@@ -351,6 +356,37 @@
   "codex.form.bat2.pros": ["你现在可以在黑暗中清晰地分辨事物。当处于暗处时，你也感觉自己的行动更加敏捷\n你的前爪坚硬而有力，让你在空手时也能造成不俗的伤害。而且还让你可以徒手高速挖掘方块，并正常收获矿石等掉落物\n虽然仍不能飞行，不过现在通过扇动膜翼，你可以跳的更高，且无论从多高的地方都可以缓慢降落。它们也可以当做鞘翅使用\n你的身体能更有效地吸收非肉类的食物，他们给与的饱食度更高\n你的体型已经足够小，让你可以挤入一格的空间中"],
   "codex.form.bat2.cons": ["你的前爪不再适合抓握笨重的工具与武器。当你用其挖掘坚硬的物块或者挥动其击打怪物时，它们只会松脱掉落\n你的前爪连抓起弓弩都显得困难，更别提使用它们了\n你的膜翼与趾行的腿部结构让装备胸甲、腿甲与鞋变得不再可能。它们让你在地面的移动速度也稍微减慢\n在阳光下时，你感觉自己变得非常虚弱与迟缓\n你不再能食肉，你的身体已经彻底无法消化它们了"],
   "codex.form.bat2.instincts": [" "],
+  "codex.form.familiar_fox0.title":["\n诅咒对你的身体产生了一些影响，橙红色的毛簇开始从你身上生长出来。你有点想要在雪地上奔跑"],
+  "codex.form.familiar_fox0.appearance": ["你的肢体末端长出了黑色的软毛。在向上蔓延的过程中，它们的颜色会逐渐过渡到橙红色\n你的耳朵向头顶移动，它们变成了三角形，并且也被黑色的软毛所覆盖\n你的指甲变得更加尖利，它们在黑色的皮毛中看起来相当显眼\n你发现身体的各处零星地长出了橙红色的软毛，其中最引人注目的是由你背部下方长出的一团红白相间的毛簇，触碰它时，你可以感受到其中隐藏的骨质突起"],
+  "codex.form.familiar_fox0.pros": ["让你疑惑的是，女巫似乎不再会试图攻击你\n你的身体更具有活力，奔跑速度变得更快\n你的感知能力变得更强，让你能发现更多掉落物，其大致相当于抢夺I附魔"],
+  "codex.form.familiar_fox0.cons": ["你新长出的毛簇稍微拖慢了你在水中的移动速度\n奇怪的是，在攻击女巫时，你会感受到异常的眩晕"],
+  "codex.form.familiar_fox0.instincts": ["你开始想要",
+    {
+      "text":" 吃一些甜浆果", "color":"#c67681"
+    },"\n你开始想要",
+    {
+      "text":" 在雪地上奔跑", "color":"#c67681"
+    }],
+  "codex.form.familiar_fox1.title": ["\n橙红色的毛发在你身上进一步蔓延，一条红色的蓬松尾巴在你身后摆动"],
+  "codex.form.familiar_fox1.appearance": ["橙红色的毛皮进一步在你身上蔓延。你的四肢与躯干上部已经几乎被厚实的皮毛所覆盖\n你头顶三角形的耳朵也进一步扩大，让你能够听见更细微的声响。从它们的基部生长出的红色毛皮覆盖了你头顶与面部的一些区域，让你看起来如同戴了某种面具一样\n你的手部与足部比之前大了一圈，它们变成了更加接近爪子的结构\n你尾骨处的红色毛簇已经成长为了一条蓬松的尾巴，它在你身后缓慢地摆动着\n\n令人在意的是，除了一直存在的变幻魔法以外，你还感受到了体内所掺杂的一种新的魔法…"],
+  "codex.form.familiar_fox1.pros": ["你体内所掺杂的魔法似乎给了你一些新的能力。现在，你可以在空手时右键从弱小生物身上吸取能量来恢复一些饱食度\n\n不知为何，所有的灾厄村民们似乎都不再对你产生敌意\n你的奔跑速度变得更快，新长出的皮毛可以保护你在甜浆果丛中自如穿梭\n进一步增强的感知能力让你能发现更多掉落物，其大致相当于抢夺II附魔"],
+  "codex.form.familiar_fox1.cons": ["你体内所掺杂的魔法似乎影响了你的消化系统，让你从食物中获取的饱食度变少了\n你的生命值稍微减少了一些\n你的毛皮稍微拖慢了你在水中的移动速度\n在攻击灾厄村民时，你现在也会感受到异常的眩晕"],
+  "codex.form.familiar_fox1.instincts": ["",
+    {
+      "text":"从生物身上吸取能量的想法", "color":"#c67681"
+    },"开始吸引你\n",
+    {
+      "text":"待在甜浆果丛中的想法", "color":"#c67681"
+    },"开始吸引你","\n女巫与唤魔者身上的魔力对你产生了某种吸引力，你开始想要",
+    {
+      "text":"靠近并观察它们", "color":"#c67681"
+    }
+  ],
+  "codex.form.familiar_fox2.title": ["你现在看起来很像一只直立行走的红狐，不过有些事情有点不对劲…"],
+  "codex.form.familiar_fox2.appearance": ["你的后足已经完全变成了趾行的结构，你的面部也向前突出形成了短小的吻部，让你看起来更加接近某种野兽\n除了黑色的四爪与头顶的三角形耳朵，以及面部下方与胸脯部分的白色软毛以外，你的身体大部分被厚实的橙红色皮毛完全覆盖\n两条蓬松的红色尾巴在你身后摆动…等等，两条？这可有点异乎寻常\n青蓝色的火焰不时从你周身凭空出现，又缓慢消失\n\n很明显，这一形态所具有的魔力被其它人修改过了.."],
+  "codex.form.familiar_fox2.pros": ["你体内所掺杂的魔法进一步增强了。现在，你能够在空手时通过右键从更强的生物身上吸收更多饱食度。它也可以让你感知到一定范围内的生物位置\n智慧生物似乎拥有更多能量，也许你应该试试其他目标…\n\n灾厄村民们把你视为盟友，它们不再会攻击你\n你的奔跑速度变得更快，你也可以在甜浆果丛中自如穿梭\n增强的感知能力让你能发现更多掉落物，其大致相当于抢夺II附魔\n得益于你形态中所掺杂的魔力，通过在相应的原料上右键使用水瓶，你可以直接在背包栏中酿造剧毒、瞬间回复与瞬间伤害的喷溅式药水"],
+  "codex.form.familiar_fox2.cons": ["你体内所掺杂的魔法进一步影响了你的消化系统，现在大多数食物只能为你提供相当少的饱食度。你需要寻求其他方法进行恢复\n\n你的生命值进一步稍微减少\n腿甲与鞋不再适合你新的身体结构\n你蓬松的毛皮进一步拖慢了你在水中的移动速度\n当试图攻击灾厄村民时，你体内所掺杂的魔法阻止你对它们造成伤害\n不知为何，村民们似乎开始害怕你，它们会主动避开你\n你发现当你注视着女巫与唤魔者时，你会不自觉被它们的魔力吸引过去…"],
+  "codex.form.familiar_fox2.instincts": ["在你的内心深处传来了某种微弱的悸动：你身上的变化还没有到达终点\n一剂共鸣催化剂可以让你的变化抵达下一个阶段…但这一过程很可能是永久性的\n你不会真的在考虑这件事情吧？"],
   "codex.form.familiar_fox3.title": ["\n‘幻形者非常适合作为使魔。对魔法具有亲和性，又拥有足够的智慧…\n看来我们已经找到了正确的方法’"],
   "codex.form.familiar_fox3.appearance": ["你整体看上去与普通的野生红狐别无二致——除了身后摆动的异于寻常的两条大尾巴以外\n你的眼睛现在毫无疑问属于某种野生动物。在阳光下，你的瞳孔会收缩成一条狭缝\n你意识到体内魔法的性质已经与之前完全不同。曾经充满变化的魔力已经被固定，并永远转变为了另外的东西——某种更加适合一只使魔的魔力…\n青蓝色的火焰不时从你周身凭空出现，又缓慢消失。它们标志着你的使魔身份\n\n看来这就是你之后的新生活了"],
   "codex.form.familiar_fox3.pros": ["灾厄村民们把你视为盟友，它们不再会攻击你\n你的奔跑速度变得更快。由于你的体型，远程攻击也难以命中你\n得益于更加强大的使魔魔力，通过在相应的原料上右键使用水瓶，你可以直接在背包栏中酿造强力的剧毒、瞬间回复与瞬间伤害的喷溅式药水\n同时，通过对魔力的感知，你可以透视一定范围内的生物位置\n由于你厚实的皮毛，你可以在甜浆果丛中自如穿梭\n你的使魔魔力保护你不受到火焰与岩浆的伤害。同时，大部分持续状态效果都不再能够影响你的身体，无论是正面还是负面"],
