适配服务端之后出现的一些Bug以及之前的一些Bug修复完成，准备开始进行机制优化  Fixes for both the newly emerged bugs and previous bugs, preparing to begin mechanism optimizations

--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -127,13 +127,16 @@
   "info.shape-shifter-curse.on_enable_mod": ["随着书页的开启，书中封印的强大魔法涌入了你的身体！"],
   "info.shape-shifter-curse.on_enable_mod_after": ["回过神时，你发现自己...似乎没什么变化？\n也许你应该检查一下书中的内容.."],
   "info.shape-shifter-curse.before_cursed_moon": ["你感觉到体内的魔法正在涌动，下一个夜晚，诅咒之月将会升起..."],
-  "info.shape-shifter-curse.before_cursed_moon_nether": ["你感觉到体内的魔法正在涌动，一段时间后，诅咒之月将会在某处升起————似乎即使在其它位面，你依然无法远离它的影响"],
+  "info.shape-shifter-curse.before_cursed_moon_nether": ["你感觉到体内的魔法正在涌动，一段时间后，诅咒之月将会在某处升起————似乎即使在其它位面，你依然无法远离它"],
   "info.shape-shifter-curse.on_cursed_moon": ["你体内的魔法开始激荡，诅咒之月升起了"],
   "info.shape-shifter-curse.on_cursed_moon_nether": ["你体内的魔法开始激荡，诅咒之月在某处升起了"],
   "info.shape-shifter-curse.on_cursed_moon_special": ["奇怪的是，它似乎没有对你的身体产生可见的影响..也许你当前的形态比较[特殊]？"],
+  "info.shape-shifter-curse.on_cursed_moon_permanent": ["然而，它也已经无法对你永久改变的形态造成任何影响了"],
   "info.shape-shifter-curse.on_cursed_moon_before_enable": ["今夜的月亮看起来有些奇怪。不知道是不是由于它的影响，怪物们开始动荡不安"],
   "info.shape-shifter-curse.end_cursed_moon": ["诅咒之月的影响消退了。你体内的魔法趋于平静，让你回复到了诅咒之月升起前的形态"],
   "info.shape-shifter-curse.end_cursed_moon_special": ["诅咒之月的影响消退了,你体内的魔法趋于平静"],
+  "info.shape-shifter-curse.end_cursed_moon_permanent": ["诅咒之月落下了，它带给其他生物的影响也随之消退"],
+
   "info.shape-shifter-curse.origin_form_sleep_when_attached": ["在睡梦中，你所受到的咒文效果激化了你体内的魔法，让你的身体发生了变化..."],
   "info.shape-shifter-curse.origin_form_time_end_when_attached": ["你所受到的咒文效果逐渐消退，你体内的魔法恢复了平静"],
   "info.shape-shifter-curse.end_cursed_moon_by_cure": ["诅咒之月的影响消退了。由于黄金的魔力，你当前的形态得以稳定下来"],
@@ -146,9 +149,11 @@
       "color": "#ed721d"
     },
     "才可能将其逆转"],
+  "info.shape-shifter-curse.permanent_form_used_cure": ["你什么也没有感受到。它无法对你永久改变的形态产生任何作用"],
   "info.shape-shifter-curse.origin_form_used_cure_final": ["失望的是，你体内的魔法在稍微平息了一刻之后又恢复如常。似乎黄金的魔力并不足以彻底驱散咒文对你的影响..."],
   "info.shape-shifter-curse.transformed_by_cure_final": ["强大的黄金魔力几乎完全逆转了你的变化！你体内魔法暂时蛰伏了下来，等待着下一个契机..."],
   "info.shape-shifter-curse.max_form_used_cure_final": ["生效了！更加强大的黄金魔力成功逆转了你身体的一部分变化"],
+  "info.shape-shifter-curse.permanent_form_used_cure_final": ["你试图求助于更强力的魔法，但也无济于事\n你永久改变的形态已经无法逆转了"],
   "info.shape-shifter-curse.origin_form_used_catalyst": ["受到催化剂的影响，你体内的魔法有些动荡不安，不过最后依然恢复了平静。似乎它们缺少一个更加明确的倾向...？"],
   "info.shape-shifter-curse.origin_form_used_catalyst_attached": ["你所受到的咒文效果被催化剂所活化，让你的身体发生了变化..."],
   "info.shape-shifter-curse.use_catalyst": ["你体内的魔法被催化剂进一步激化了..."],
@@ -224,6 +229,7 @@
   "commands.shape-shifter-curse.form_not_found": ["未找到指定的形态！"],
   "power.origins.form_allay_sp_amethyst_shard_only.name": ["水晶食性"],
   "power.origins.form_ocelot_2_raw_meat_only.name": ["生肉食性"],
+  "power.origins.form_familiar_fox_3_no_food.name": ["使魔体质"],
   "power.origins.vegetarian.name": ["素食者"],
   "codex.header.status": ["状态"],
   "codex.header.appearance": ["外观"],
@@ -320,12 +326,12 @@
     }],
   "codex.form.ocelot2.title": ["\n四足行动对于现在的你而言是最自然的姿态。当蹲坐在地面上时，你几乎和某种大型猫科动物没有什么区别"],
   "codex.form.ocelot2.appearance": ["你头顶的耳朵变得更大也更加灵活，你注意到它们会自动转向声音来源的方位\n你的全身现在都被带有黑色斑点的毛皮所覆盖。它们很保暖，你绝对不希望它们被打湿\n你的后足完全变成了趾行的结构，但是你依然可以勉强维持直立\n借助有力的四爪与几乎与躯干等长的尾部，你可以压低重心在原野上与森林中以极快的速度四足奔行与飞扑。你有信心没有任何猎物能从你的利爪下逃脱"],
-  "codex.form.ocelot2.pros": ["得益于身体结构的改变，在潜行时，你会进入四足移动的狩猎姿态\n处于狩猎姿态时，你能够极为快速的奔跑，并且可以进入一格高的狭小区域\n处于狩猎姿态时，你的跳跃会变为前扑，让你能够跨越相当远的距离\n\n你的猫科动物眼睛让你即使在黑夜也能够清晰视物\n你能够在空手时使用前爪造成大量伤害\n借助你的爪子，你可以在树干与树叶上攀爬\n你不会发出脚步声，也不会受到摔落伤害\n新鲜的生肉给与你更高的饱食度\n你的身体给了你强大的免疫力，让你不会受到饥饿与中毒的异常状态\n苦力怕会对你敬而远之"],
+  "codex.form.ocelot2.pros": ["得益于身体结构的改变，在潜行时，你会进入四足移动的狩猎姿态\n处于狩猎姿态时，你能够极为快速的奔跑，并且可以进入一格高的狭小区域\n处于狩猎姿态时，你的跳跃会变为前扑，让你能够跨越相当远的距离\n\n你的感官现在变得非常敏锐，当投射物将要命中你时，你会完全本能地向侧面闪躲，让它擦身而过\n你的猫科动物眼睛让你即使在黑夜也能够清晰视物\n你能够在空手时使用前爪造成大量伤害\n借助你的爪子，你可以在树干与树叶上攀爬\n你不会发出脚步声，也不会受到摔落伤害\n新鲜的生肉给与你更高的饱食度\n你的身体给了你强大的免疫力，让你不会受到饥饿与中毒的异常状态\n苦力怕会对你敬而远之"],
   "codex.form.ocelot2.cons": ["处于狩猎姿态时，大幅度增强的身体机能会让你的饱食度快速被消耗。当饱食度少于阈值时，你也不再能够维持狩猎姿态\n\n对于你现在趾行的后足而言，用双足疾跑变得不再可能\n作为变得更小，更轻巧的代价，你的最大生命值更大幅度地减少了\n作为疾速而致命的猎手，除了头盔以外，你只能装备不影响行动的皮甲或链甲。同时，你也不再能有效使用盾牌阻挡伤害\n由于提升的新陈代谢，你的自然饱食度消耗速度更快\n你的消化系统进一步改变，生肉是你现在食谱中唯一的食物"],
   "codex.form.ocelot2.instincts": ["在你的内心深处传来了某种微弱的悸动：你身上的变化还没有到达终点\n一剂共鸣催化剂可以让你的变化抵达下一个阶段…但这一过程很可能是永久性的\n你不会真的在考虑这件事情吧？"],
   "codex.form.ocelot3.title": ["\n'有人报告说在附近看到了一只大的出奇的白色豹猫。靠近森林时最好小心一些'"],
   "codex.form.ocelot3.appearance": ["除了皮毛的颜色与身体的尺寸以外，你整体看上去与一只野生豹猫几乎没有差别\n你是密林中的王者。在你敏锐的双眼与尖利的四爪下，任何生物都是你的狩猎目标"],
-  "codex.form.ocelot3.pros": ["你的身体完全变为了四足结构，让你无论在任何状态跳跃时都可以向前方猛扑，从而跨越非常远的距离\n更加强力的四爪让你可以在几乎任何表面上攀爬\n你的疾跑能力被潜行所替代。在潜行时，你能够以极快的速度向前飞驰\n你在黑夜也能够清晰视物\n你能够在空手时使用前爪造成大量伤害\n你不会发出脚步声，也不会受到摔落伤害\n新鲜的生肉给与你更高的饱食度\n你的身体给了你强大的免疫力，让你不会受到饥饿与中毒的异常状态\n苦力怕会对你敬而远之"],
+  "codex.form.ocelot3.pros": ["你的身体完全变为了四足结构，让你的跳跃力大大加强了\n更加强力的四爪让你可以在几乎任何表面上攀爬\n你的疾跑能力被潜行所替代。在潜行时，你能够以极快的速度向前飞驰与向前猛扑，从而跨越非常远的距离\n你极为敏锐的感官可以让你本能地闪躲将要命中你的投射物\n你在黑夜也能够清晰视物\n你能够在空手时使用前爪造成大量伤害\n你不会发出脚步声，也不会受到摔落伤害\n新鲜的生肉给与你更高的饱食度\n你的身体给了你强大的免疫力，让你不会受到饥饿与中毒的异常状态\n苦力怕会对你敬而远之"],
   "codex.form.ocelot3.cons": ["完全改变的身体让你只能以生肉为食。即使在静止不动时，你高速运转的代谢系统也会以一定速度消耗饱食度——持续不断的狩猎是你唯一的选择\n\n任何护甲对你运动的阻碍都让你难以忍受。现在你只能穿戴头盔，也无法正常使用盾牌"],
   "codex.form.ocelot3.instincts": [""],
 
@@ -384,12 +390,12 @@
   ],
   "codex.form.familiar_fox2.title": ["你现在看起来很像一只直立行走的红狐，不过有些事情有点不对劲…"],
   "codex.form.familiar_fox2.appearance": ["你的后足已经完全变成了趾行的结构，你的面部也向前突出形成了短小的吻部，让你看起来更加接近某种野兽\n除了黑色的四爪与头顶的三角形耳朵，以及面部下方与胸脯部分的白色软毛以外，你的身体大部分被厚实的橙红色皮毛完全覆盖\n两条蓬松的红色尾巴在你身后摆动…等等，两条？这可有点异乎寻常\n青蓝色的火焰不时从你周身凭空出现，又缓慢消失\n\n很明显，这一形态所具有的魔力被其它人修改过了.."],
-  "codex.form.familiar_fox2.pros": ["你体内所掺杂的魔法进一步增强了。现在，你能够在空手时通过右键从更强的生物身上吸收更多饱食度。它也可以让你感知到一定范围内的生物位置\n在万不得已时，你可以从敌对生物身上吸取能量，不过它们的能量会让你虚弱\n智慧生物似乎拥有更多能量，也许你应该试试其他目标…\n\n灾厄村民们把你视为盟友，它们不再会攻击你\n你的奔跑速度变得更快，你也可以在甜浆果丛中自如穿梭\n增强的感知能力让你能发现更多掉落物，其大致相当于抢夺II附魔\n得益于你形态中所掺杂的魔力，通过在相应的原料上右键使用水瓶，你可以直接在背包栏中酿造剧毒、瞬间回复与瞬间伤害的喷溅式药水"],
+  "codex.form.familiar_fox2.pros": ["你体内所掺杂的魔法进一步增强了。现在，你能够在空手时通过右键从更强的生物身上吸收更多饱食度。它也可以让你感知到一定范围内的生物位置\n在万不得已时，你可以从敌对生物身上吸取能量，不过它们的能量会让你虚弱\n智慧生物似乎拥有更多能量，也许你应该试试其他目标…\n\n灾厄村民们把你视为盟友，它们不再会攻击你\n你的奔跑速度变得更快，你也可以在甜浆果丛中自如穿梭\n增强的感知能力让你能发现更多掉落物，其大致相当于抢夺II附魔\n得益于你形态中所掺杂的魔力，通过在相应的原料上右键使用水瓶，你可以直接在背包栏中酿造剧毒、瞬间回复与瞬间伤害的喷溅式药水。你现在可以堆叠三个相同的药水"],
   "codex.form.familiar_fox2.cons": ["你体内所掺杂的魔法进一步影响了你的消化系统，现在大多数食物只能为你提供相当少的饱食度。你需要寻求其他方法进行恢复\n\n你的生命值进一步稍微减少\n腿甲与鞋不再适合你新的身体结构\n你蓬松的毛皮进一步拖慢了你在水中的移动速度\n当试图攻击灾厄村民时，你体内所掺杂的魔法阻止你对它们造成伤害\n不知为何，村民们似乎开始害怕你，它们会主动避开你\n你发现当你注视着女巫与唤魔者时，你会不自觉被它们的魔力吸引过去…"],
   "codex.form.familiar_fox2.instincts": ["在你的内心深处传来了某种微弱的悸动：你身上的变化还没有到达终点\n一剂共鸣催化剂可以让你的变化抵达下一个阶段…但这一过程很可能是永久性的\n你不会真的在考虑这件事情吧？"],
   "codex.form.familiar_fox3.title": ["\n‘幻形者非常适合作为使魔。对魔法具有亲和性，又拥有足够的智慧…\n看来我们已经找到了正确的方法’"],
   "codex.form.familiar_fox3.appearance": ["你整体看上去与普通的野生红狐别无二致——除了身后摆动的异于寻常的两条大尾巴以外\n你的眼睛现在毫无疑问属于某种野生动物。在阳光下，你的瞳孔会收缩成一条狭缝\n你意识到体内魔法的性质已经与之前完全不同。曾经充满变化的魔力已经被固定，并永远转变为了另外的东西——某种更加适合一只使魔的魔力…\n青蓝色的火焰不时从你周身凭空出现，又缓慢消失。它们标志着你的使魔身份\n\n看来这就是你之后的新生活了"],
-  "codex.form.familiar_fox3.pros": ["灾厄村民们把你视为盟友，它们不再会攻击你\n你的奔跑速度变得更快。由于你的体型，远程攻击也难以命中你\n得益于更加强大的使魔魔力，通过在相应的原料上右键使用水瓶，你可以直接在背包栏中酿造强力的剧毒、瞬间回复与瞬间伤害的喷溅式药水\n同时，通过对魔力的感知，你可以透视一定范围内的生物位置\n由于你厚实的皮毛，你可以在甜浆果丛中自如穿梭\n你的使魔魔力保护你不受到火焰与岩浆的伤害。同时，大部分持续状态效果都不再能够影响你的身体，无论是正面还是负面"],
+  "codex.form.familiar_fox3.pros": ["灾厄村民们把你视为盟友，它们不再会攻击你\n你的奔跑速度变得更快。由于你的体型，远程攻击也难以命中你\n得益于更加强大的使魔魔力，通过在相应的原料上右键使用水瓶，你可以直接在背包栏中酿造强力的剧毒、瞬间回复与瞬间伤害的喷溅式药水。你现在可以堆叠三个相同的药水\n同时，通过对魔力的感知，你可以透视一定范围内的生物位置\n由于你厚实的皮毛，你可以在甜浆果丛中自如穿梭\n你的使魔魔力保护你不受到火焰与岩浆的伤害。同时，大部分持续状态效果都不再能够影响你的身体，无论是正面还是负面"],
   "codex.form.familiar_fox3.cons": ["女巫与唤魔者的魔力与你的使魔魔力链接。它们不允许你伤害灾厄村民，并且会试图控制你的行为…\n作为一只使魔，普通的食物不再能够为你提供能量。你需要在空手时右键从其他生物身上吸取能量来恢复饱食度\n在万不得已时，你可以从敌对生物身上吸取能量，不过它们的能量会让你虚弱。\n智慧生物的能量显然更加充沛。另外，女巫们似乎很乐意提供这些能量\n也许你应该去它们身边…\n\n你的生命值更少。由于不再有能够自如使用工具的双手，你挖掘方块的速度也变得更慢\n腿甲与鞋不再适合你的四足身体结构，你在水中的移动速度也变得更慢\n村民们害怕你，它们会主动避开你"],
   "codex.form.familiar_fox3.instincts": [""],
   "codex.form.allay_sp.title": ["\n你现在的样子相当接近于某种友善的灵体生物，但不清楚是否由于你体内存在的魔法，你的身上出现了一些不太一样的特征"],
