--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -275,15 +275,15 @@
   "codex.form.axolotl0.title": ["\n诅咒对你的身体产生了一些可见的影响。除此之外，你有一种想要浸没在水中的冲动。"],
   "codex.form.axolotl0.appearance": ["你的脸颊两侧生长出了几丛淡红色的簇状结构，它们总是处于潮湿状态，似乎能帮你补充一部分氧气\n你注意到波浪状的半透明鳍膜开始附着在你四肢的末端与新长出的尾部上\n你的皮肤似乎开始变得有些潮湿"],
   "codex.form.axolotl0.pros": ["由于新的氧气供应，你可以在水下活动更长时间\n你的皮肤在水下的阻力更小，让你可以在水中移动的稍快一些"],
-  "codex.form.axolotl0.cons": ["你的皮肤更容易沾染沙土，稍微拖慢你在沙地上的移动速度"],
+  "codex.form.axolotl0.cons": ["你的皮肤更容易沾染颗粒与沙尘，稍微拖慢你在松散的地面上的移动速度"],
   "codex.form.axolotl0.instincts": ["你开始想要",
     {
     "text":"待在水中", "color":"#c67681"
     }],
   "codex.form.axolotl1.title": ["\n生长后的腮与有力的尾部让你能够自由探索被淹没的结构。刚捕获的鱼类是最适合你的食物"],
   "codex.form.axolotl1.appearance": ["你脸颊两侧的腮丛进一步生长。在水中，它们几乎可以供给你所需的所有氧气\n你身上的鳍膜进一步生长，覆盖了你身体的更多部分。它们的颜色似乎变得更加鲜艳了\n你的尾部进一步延长，变得更加强壮\n你的颈部生长出了吸水性很强的白色绒毛"],
-  "codex.form.axolotl1.pros": ["借助进一步发育的腮丛，你可以在水下呼吸，无需换气\n你在水中可以移动的稍快一些\n你的身体能更有效地消化生的鱼类，它们给与的饱食度更高\n你拥有很强的再生能力，只要饱食度高于3格，你的生命值就可以随着时间缓慢恢复\n借助有力的尾部，你可以从水面向空中跃起，到达高处"],
-  "codex.form.axolotl1.cons": ["你无法再装备头盔：你的腮丛无法忍受异物的碰触\n你的皮肤更容易沾染沙土，稍微拖慢你在沙地上的移动速度\n你目前的消化系统不再能消化非肉类的食物"],
+  "codex.form.axolotl1.pros": ["借助进一步发育的腮丛，你可以在水下呼吸，无需换气\n你在水中可以移动的稍快一些。你新的鳍膜与光滑的皮肤让流水成为你的助力，让你在水流中移动更加迅捷\n你的身体能更有效地消化生的鱼类，它们给与的饱食度更高\n你拥有很强的再生能力，只要饱食度高于3格，你的生命值就可以随着时间缓慢恢复\n借助有力的尾部，你可以从水面向空中跃起，到达高处"],
+  "codex.form.axolotl1.cons": ["你无法再装备头盔：你的腮丛无法忍受异物的碰触\n你的皮肤与鳍膜更容易沾染颗粒与沙尘，拖慢了你在松散的地面上的移动速度\n你目前的消化系统不再能消化非肉类的食物"],
   "codex.form.axolotl1.instincts": ["你想要尽可能",
     {
       "text":"待在水中", "color":"#c67681"
@@ -296,8 +296,8 @@
     },"的想法开始吸引你"],
   "codex.form.axolotl2.title": ["\n作为两栖类的一员，你是水中的掠食者，同时也能在陆地上活动——只是务必记得保持湿润"],
   "codex.form.axolotl2.appearance": ["你的尾部现在更接近你躯干的延伸，它几乎占据了身高的一半\n发达的腮丛占据了你头部的一大部分空间。它们几乎替代了肺部的作用，只要它们还处于湿润状态，你无需呼吸就能获得充沛的氧气\n半透明的鳍膜蔓延到了你身体的大部分区域。在水下，它们会随着波浪有节律地摆动\n白色的绒毛几乎覆盖了你的前胸与背部。它们能如同海绵一般储存水分，让你在陆地上也能长时间保持湿润"],
-  "codex.form.axolotl2.pros": ["由于对腮部呼吸的依赖，你必须时刻保持湿润——\n你的氧气值现在指示你的湿润度。它现在会在水中得到补充，并在陆地上缓慢消耗\n摄入水瓶或任何药水也可以补充湿润度\n\n你的身体从水中获得力量。在湿润度不为零时，你的最大生命值大幅提升\n你拥有很强的再生能力，只要饱食度高于3格，你的生命值就可以随着时间缓慢恢复\n\n生鱼给与更高的饱食度\n发达的鳍膜与强壮的尾部让你可以在水中移动的更快。它们能让你自由地跳出水面，也可以帮助你在水中悬浮，不再下沉\n四肢末端的钝爪增强你在水中的抓握力，让你可以在水下毫无阻碍地快速破坏方块\n身体结构的变化让你可以快速地爬行通过狭小的地方"],
-  "codex.form.axolotl2.cons": ["水分现在是你的生命线。当丧失湿润度时，你的最大生命值与移动速度均会大幅降低，让你几乎寸步难行\n\n你无法再装备头盔\n你在沙地上的移动速度更慢\n你只能食用肉类"],
+  "codex.form.axolotl2.pros": ["由于对腮部呼吸的依赖，你必须时刻保持湿润——\n你的氧气值现在指示你的湿润度。它现在会在水中得到补充，并在陆地上缓慢消耗\n摄入水瓶或任何药水也可以补充湿润度\n\n你的身体从水中获得力量。你的最大生命值现在会随着湿润度的变化而变化\n你拥有很强的再生能力，在水分充沛且饱食度高于3格时，你的生命值就可以随着时间缓慢恢复\n\n生鱼给与更高的饱食度\n强壮的尾部让你可以在水中移动的更快。你可以自由地跳出水面，在水下时，你可以按下冲刺键来向前猛冲\n完全发育的鳍膜如同船帆一样，让你能借助流动的水非常迅捷地移动\n四肢末端的钝爪增强你在水中的抓握力，让你可以在水下毫无阻碍地快速破坏方块\n光滑的身体让你可以快速地爬行通过狭小的地方"],
+  "codex.form.axolotl2.cons": ["水分现在是你的生命线。当丧失湿润度时，你的最大生命值与移动速度均会大幅降低，让你几乎寸步难行\n\n你无法再装备头盔\n由于你湿润的皮肤与鳍膜，你在松散的地面上的移动速度会被颗粒与沙尘拖慢\n你只能食用肉类"],
   "codex.form.axolotl2.instincts": [" "],
 
   "codex.form.ocelot0.title": ["\n诅咒对你产生了一些可见的影响。你发现你的身体在潜行时变得更加自然协调"],
