--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -289,7 +289,7 @@
       "text":"待在水中", "color":"#c67681"
     },
     {
-      "text":"\n食用更多生鱼肉", "color":"#c67681"
+      "text":"\n狩猎鱼类与食用更多生鱼肉", "color":"#c67681"
     },"的想法开始吸引你",
     {
       "text":"\n在垂滴叶丛中漫游", "color":"#c67681"
@@ -318,7 +318,7 @@
     },
     "\n你的内心中产生了",
     {
-      "text":"狩猎更多家畜的冲动", "color":"#c67681"
+      "text":"使用利爪攻击更多生物的冲动", "color":"#c67681"
     },
     "\n你的内心中产生了",
     {
@@ -353,6 +353,9 @@
     },
     {
       "text":"\n食用更多水果的想法", "color":"#c67681"
+    },"开始吸引你",
+    {
+      "text":"\n跳跃到空中的想法", "color":"#c67681"
     },"开始吸引你",
     {
       "text":"\n被滴水石块围绕", "color":"#c67681"
