familiar_fox 2/3添加使用空瓶收集能量得到饱食度药水的power，让其有在无mob时恢复饱食度的途径 Familiar_fox 2/3 add a new power—using empty bottles to collect energy and obtain Satiety Potions, providing a way to restore hunger even when no mobs are present.

--- a/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
+++ b/src/main/resources/assets/shape-shifter-curse/lang/zh_cn.json
@@ -63,6 +63,12 @@
   "item.minecraft.splash_potion.effect.to_familiar_fox_0_potion": ["喷溅型狐之使魔咒文药水"],
   "item.minecraft.lingering_potion.effect.to_familiar_fox_0_potion": ["滞留型狐之使魔咒文药水"],
   "effect.shape-shifter-curse.to_familiar_fox_0_potion": ["那些女巫们究竟想要对你做什么..？"],
+
+  "item.minecraft.potion.effect.feed_potion": ["压缩能量药水"],
+  "item.minecraft.splash_potion.effect.feed_potion": ["喷溅型压缩能量药水"],
+  "item.minecraft.lingering_potion.effect.feed_potion": ["滞留型压缩能量药水"],
+  "effect.shape-shifter-curse.feed_potion": ["高密度的能量在瓶中流动，可以恢复饱食度"],
+
   "item.minecraft.potion.effect.to_alpha_0_potion": ["ALPHA"],
     "item.minecraft.splash_potion.effect.to_alpha_0_potion": ["ALPHA"],
     "item.minecraft.lingering_potion.effect.to_alpha_0_potion": ["ALPHA"],
@@ -393,13 +399,13 @@
   ],
   "codex.form.familiar_fox2.title": ["你现在看起来很像一只直立行走的红狐，不过有些事情有点不对劲…"],
   "codex.form.familiar_fox2.appearance": ["你的后足已经完全变成了趾行的结构，你的面部也向前突出形成了短小的吻部，让你看起来更加接近某种野兽\n除了黑色的四爪与头顶的三角形耳朵，以及面部下方与胸脯部分的白色软毛以外，你的身体大部分被厚实的橙红色皮毛完全覆盖\n两条蓬松的红色尾巴在你身后摆动…等等，两条？这可有点异乎寻常\n青蓝色的火焰不时从你周身凭空出现，又缓慢消失\n\n很明显，这一形态所具有的魔力被其它人修改过了.."],
-  "codex.form.familiar_fox2.pros": ["你体内所掺杂的魔法进一步增强了。现在，你能够在空手时通过右键从更强的生物身上吸收更多饱食度。它也可以让你感知到一定范围内的生物位置\n在万不得已时，你可以从敌对生物身上吸取能量，不过它们的能量会让你虚弱\n智慧生物似乎拥有更多能量，也许你应该试试其他目标…\n\n灾厄村民们把你视为盟友，它们不再会攻击你\n你的奔跑速度变得更快，你也可以在甜浆果丛中自如穿梭\n增强的感知能力让你能发现更多掉落物，其大致相当于抢夺II附魔\n得益于你形态中所掺杂的魔力，通过在相应的原料上右键使用水瓶，你可以直接在背包栏中酿造剧毒、瞬间回复与瞬间伤害的喷溅式药水。你现在可以堆叠三个相同的药水"],
+  "codex.form.familiar_fox2.pros": ["你体内所掺杂的魔法进一步增强了。现在，你能够在空手时通过右键从更强的生物身上吸收更多饱食度。它也可以让你感知到一定范围内的生物位置\n在万不得已时，你可以从敌对生物身上吸取能量，不过它们的能量会让你虚弱\n智慧生物似乎拥有更多能量，你可以将它们的能量装在空瓶中以备后用。也许你应该试试其他目标…\n\n灾厄村民们把你视为盟友，它们不再会攻击你\n你的奔跑速度变得更快，你也可以在甜浆果丛中自如穿梭\n增强的感知能力让你能发现更多掉落物，其大致相当于抢夺II附魔\n得益于你形态中所掺杂的魔力，通过在相应的原料上右键使用水瓶，你可以直接在背包栏中酿造剧毒、瞬间回复与瞬间伤害的喷溅式药水。你现在可以堆叠三个相同的药水"],
   "codex.form.familiar_fox2.cons": ["你体内所掺杂的魔法进一步影响了你的消化系统，现在大多数食物只能为你提供相当少的饱食度。你需要寻求其他方法进行恢复\n\n你的生命值进一步稍微减少\n腿甲与鞋不再适合你新的身体结构\n你蓬松的毛皮进一步拖慢了你在水中的移动速度\n当试图攻击灾厄村民时，你体内所掺杂的魔法阻止你对它们造成伤害\n不知为何，村民们似乎开始害怕你，它们会主动避开你\n你发现当你注视着女巫与唤魔者时，你会不自觉被它们的魔力吸引过去…"],
   "codex.form.familiar_fox2.instincts": ["在你的内心深处传来了某种微弱的悸动：你身上的变化还没有到达终点\n一剂共鸣催化剂可以让你的变化抵达下一个阶段…但这一过程很可能是永久性的\n你不会真的在考虑这件事情吧？"],
   "codex.form.familiar_fox3.title": ["\n‘幻形者非常适合作为使魔。对魔法具有亲和性，又拥有足够的智慧…\n看来我们已经找到了正确的方法’"],
   "codex.form.familiar_fox3.appearance": ["你整体看上去与普通的野生红狐别无二致——除了身后摆动的异于寻常的两条大尾巴以外\n你的眼睛现在毫无疑问属于某种野生动物。在阳光下，你的瞳孔会收缩成一条狭缝\n你意识到体内魔法的性质已经与之前完全不同。曾经充满变化的魔力已经被固定，并永远转变为了另外的东西——某种更加适合一只使魔的魔力…\n青蓝色的火焰不时从你周身凭空出现，又缓慢消失。它们标志着你的使魔身份\n\n看来这就是你之后的新生活了"],
   "codex.form.familiar_fox3.pros": ["灾厄村民们把你视为盟友，它们不再会攻击你\n你的奔跑速度变得更快。由于你的体型，远程攻击也难以命中你\n得益于更加强大的使魔魔力，通过在相应的原料上右键使用水瓶，你可以直接在背包栏中酿造强力的剧毒、瞬间回复与瞬间伤害的喷溅式药水。你现在可以堆叠三个相同的药水\n同时，通过对魔力的感知，你可以透视一定范围内的生物位置\n由于你厚实的皮毛，你可以在甜浆果丛中自如穿梭\n你的使魔魔力保护你不受到火焰与岩浆的伤害。同时，大部分持续状态效果都不再能够影响你的身体，无论是正面还是负面"],
-  "codex.form.familiar_fox3.cons": ["女巫与唤魔者的魔力与你的使魔魔力链接。它们不允许你伤害灾厄村民，并且会试图控制你的行为…\n作为一只使魔，普通的食物不再能够为你提供能量。你需要在空手时右键从其他生物身上吸取能量来恢复饱食度\n在万不得已时，你可以从敌对生物身上吸取能量，不过它们的能量会让你虚弱。\n智慧生物的能量显然更加充沛。另外，女巫们似乎很乐意提供这些能量\n也许你应该去它们身边…\n\n你的生命值更少。由于不再有能够自如使用工具的双手，你挖掘方块的速度也变得更慢\n腿甲与鞋不再适合你的四足身体结构，你在水中的移动速度也变得更慢\n村民们害怕你，它们会主动避开你"],
+  "codex.form.familiar_fox3.cons": ["女巫与唤魔者的魔力与你的使魔魔力链接。它们不允许你伤害灾厄村民，并且会试图控制你的行为…\n作为一只使魔，普通的食物不再能够为你提供能量。你需要在空手时右键从其他生物身上吸取能量来恢复饱食度\n在万不得已时，你可以从敌对生物身上吸取能量，不过它们的能量会让你虚弱。\n智慧生物的能量显然更加充沛。另外，女巫们似乎很乐意提供这些能量。你可以将它们的能量装在空瓶中以备后用。\n也许你应该去它们身边…\n\n你的生命值更少。由于不再有能够自如使用工具的双手，你挖掘方块的速度也变得更慢\n腿甲与鞋不再适合你的四足身体结构，你在水中的移动速度也变得更慢\n村民们害怕你，它们会主动避开你"],
   "codex.form.familiar_fox3.instincts": [""],
   "codex.form.allay_sp.title": ["\n你现在的样子相当接近于某种友善的灵体生物，但不清楚是否由于你体内存在的魔法，你的身上出现了一些不太一样的特征"],
   "codex.form.allay_sp.appearance": ["你的身体现在由某种亮蓝色的半透明薄纱状物质构成。它们非常轻盈，让你能够漂浮在空中\n一对羽状的，类似触角的结构从你的前额长出，质地相当柔韧。它们似乎给了你某种全新的感官，让你可以感觉到周围生物所在的方位\n一双枝状的翅膀从你背后生长出来。借助它们。你可以在高空中漂浮移动。在翅膀的下方，两条飘带状的结构从你的背后延伸出来——你不太确定它们的作用，也许它们可以替代你失去的腿部的某些功能"],
